2019-1/231/users/4205/executions/1651_2446.log
== SUBMITION (2019-04-15 22:19:51) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10*10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.178352
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:53) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10*10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:21:31) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.176215
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:21:33) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- OUTPUT:
senha liberada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:21:57) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.122088
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:23:01) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.173147
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:23:32) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
   if((d1+d3)%d2!=0):
print("senha invalida")

   else:
print("senha liberada")
-- EXECUTION TIME:
0.13983
-- ERROR:
  File "/home/codebench/codes/1651/2446/main.py", line 5
    if((d1+d3)%d2!=0):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:23:53) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")

else:
	print("senha liberada")
-- EXECUTION TIME:
0.183817
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:23:56) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")

else:
	print("senha liberada")
-- EXECUTION TIME:
0.214185
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:24:04) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.135517
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:51:02) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- EXECUTION TIME:
0.184318
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:51:05) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("senha liberada")
-- OUTPUT:
senha liberada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:52:18) 
-- CODE:
senha=int(input("digite sua senha: "))
d1=senha//100
d2=senha//10%10
d3=senha%10
if((d1+d3)%d2!=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.218292
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
